--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jquery": "^3.3.1",
     "popper": "^1.0.1",
     "rxjs": "~6.3.3",
+    "terser": "^3.14.1",
     "tslib": "^1.9.0",
     "vis": "^4.21.0",
     "zone.js": "~0.8.26"
